install/reflector-airgap-bundle-simple/tls/ssl-certs/ingress/nginx-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample
  labels:
    app: nginx-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-sample
  template:
    metadata:
      labels:
        app: nginx-sample
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample-service
spec:
  selector:
    app: nginx-sample
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
