install/reflector-airgap-bundle-simple/tls/ssl-certs/ingress/nginx-ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ssl-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx.samsungena.io
    secretName: samsungena-tls
  rules:
  - host: nginx.samsungena.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-sample-service
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-sample-service
            port:
              number: 80
